--- a/bdvanceswitch/build.gradle
+++ b/bdvanceswitch/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 
     implementation 'com.google.ads.mediation:facebook:6.16.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation 'com.android.installreferrer:installreferrer:2.2'
 
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.airbnb.android:lottie:6.1.0'
